feat: swagger add auth token, add statistics endpoint
